--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build & Push to Digital Ocean Registry
+name: DigitalOcean with Doctl
 
 on: push
 
@@ -9,15 +9,16 @@ jobs:
     - name: Git Checkout
       uses: actions/checkout@v1
 
-    - name: Login to Digital Ocean Registry
-      uses: docker/login-action@v1
-      with:
-        registry: registry.digitalocean.com
-        username: dop_v1_d7e83d33b165bbd6de522a5f3e3fdf94fd3b5f1e412d3e88e43e6b383e99c7e9
-        password: dop_v1_d7e83d33b165bbd6de522a5f3e3fdf94fd3b5f1e412d3e88e43e6b383e99c7e9
-
     - name: Build latest
       run: docker build -t registry.digitalocean.com/myreg887879 .
+
+    - name: Provide doctl
+      uses: digitalocean/action-doctl@v2
+      with:
+       token: dop_v1_d7e83d33b165bbd6de522a5f3e3fdf94fd3b5f1e412d3e88e43e6b383e99c7e9
+
+    - name: Login to Digital Ocean Registry
+      run: doctl registry login --expiry-seconds 600
 
     - name: Push to Digital Ocean Registry
       run: docker push registry.digitalocean.com/myreg887879
