--- a/.github/workflows/main02.yml
+++ b/.github/workflows/main02.yml
@@ -25,3 +25,9 @@ jobs:
       run:  | 
        docker build ./ -t acr34223.azurecr.io/helloworld:${{ github.run_id }}
        docker push acr34223.azurecr.io/helloworld:${{ github.run_id }} 
+       
+    - name: Azure login
+      id: login
+      uses: azure/login@v1.4.3
+      with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
