--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -1,61 +1,24 @@
 
+name: Run Azure Login with OpenID Connect
 on: [push]
 
-env:
-  ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-
-jobs: 
-  azurestack-test:
-    runs-on: self-hosted
-    steps:
-
-      - name: Login to AzureStack with Az Powershell
-        uses: azure/login@releases/v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-          environment: 'AzureStack'
-          enable-AzPSSession: true
-
-      - name: Run Az PowerShell Script Against AzureStack
-        uses: azure/powershell@v1
-        with:
-          azPSVersion: '3.1.0'
-          inlineScript: |
-            hostname
-            Get-AzContext
-            Get-AzResourceGroup
-
-      - name: Login to AzureStack with CLI
-        uses: azure/login@releases/v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-          environment: 'AzureStack'
-          enable-AzPSSession: false
-
-      - name: Run Azure CLI Script Against AzureStack
-        run: |
-          hostname
-          az group list --output table
-# name: Run Azure Login with OpenID Connect
-# on: [push]
-
-# permissions:
-#       id-token: write
-#       contents: read
+permissions:
+      id-token: write
+      contents: read
       
-# jobs: 
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: 'Az CLI login'
-#       uses: azure/login@v1
-#       with:
-#           client-id: ${{ secrets.AZURE_CLIENT_ID }}
-#           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-#           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+jobs: 
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: 'Az CLI login'
+      uses: azure/login@v1
+      with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   
-#     - name: 'Run Azure CLI commands'
-#       run: |
-#           az account show
-#           az group list
-#           pwd
+    - name: 'Run Azure CLI commands'
+      run: |
+          az account show
+          az group list
+          pwd
